day 1 text upgrade

--- a/day1/day1_mergesort.ipynb
+++ b/day1/day1_mergesort.ipynb
@@ -1,10 +1,35 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Day 1: 100 days of Daily Coding!\n",
+    "\n",
+    "Today i just started my 100 days of daily coding!\n",
+    "I start this coding challenge with the implementation of \"merge sort\" of mergesort. In computer science, it is one of the sorting algorithms that apply the paradigm of the divide and conquer. Mergesort is one of the earliest algorithms designed for general-purpose stored-program computers. The algorithm was developed by John von Neumann in 1945. The idea behind is:\n",
+    "\n",
+    "* Divide the input array into two subarrays of roughly equal size.\n",
+    "* Recursively mergesort each of the subarrays.\n",
+    "* Merge the newly sorted subarrays into a single sorted array.\n",
+    "\n",
+    "Given an unsorted array eg [4,5,8,6,1,2,3] , the output is [1, 2, 3, 4, 5, 6, 8]. It has been proven that mergesort algorithm has time complexity of O(n*lg(n)) where n is the length of the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array  [4, 5, 8, 6, 1, 2, 3]\n",
+      "sorted array:  [1, 2, 3, 4, 5, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "def merge( listToSort , listA , listB ):\n",
     "    ''' Merge listA and listB into a sorted new array '''\n",
@@ -53,6 +78,13 @@
     "print(\"array \", array)\n",
     "print('sorted array: ', mergeSort(array) )   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
