--- a/day2/day2.ipynb
+++ b/day2/day2.ipynb
@@ -2,11 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " Day 2: 100 days of Daily Coding!\n",
+    "\n",
+    "Happy Sunday!\n",
+    "\n",
+    "Today,  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "id": "fH113x7XbyQ6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prediction for the input x\n",
+      "tensor([[ 61.5000,  72.1080],\n",
+      "        [ 84.5488, 100.0979],\n",
+      "        [106.3992, 131.3717],\n",
+      "        [ 45.8068,  46.1537],\n",
+      "        [ 91.6490, 113.0400]], grad_fn=<AddBackward0>)\n",
+      "loss  tensor(102.4455, grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -38,73 +65,22 @@
     "    def mse(self,ypred,  yreal):\n",
     "        ''' mean squared error, ypred and yreal are tensor  '''\n",
     "        diff = ypred - yreal\n",
-    "        return torch.sum(diff*diff ) /diff.numel()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "I3DtKzb0wNv_",
-    "outputId": "dda64250-da13-4d2d-c11c-08e851b0ea5f"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prediction for the input x\n",
-      "tensor([[ 60.8676,  74.5137],\n",
-      "        [ 75.1639,  95.0389],\n",
-      "        [128.7612, 139.0097],\n",
-      "        [ 40.9600,  59.5409],\n",
-      "        [ 78.2052,  96.4108]], grad_fn=<AddBackward0>)\n"
-     ]
-    }
-   ],
-   "source": [
+    "        return torch.sum(diff*diff ) /diff.numel()\n",
     "inputs = np.array([[73, 67, 43], [91, 88, 64], [87, 134, 58], [102, 43, 37], [69, 96, 70]], dtype='float32')\n",
     "targets = np.array([[56, 70], [81, 101], [119, 133], [22, 37],  [103, 119]], dtype='float32')\n",
     "lm = LinearRegressionModel(inputs , targets)\n",
     "lm.fit(200)\n",
     "prediction = lm.predict(inputs)\n",
     "print('prediction for the input x')\n",
-    "print(prediction)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "doa6qHrLyvax",
-    "outputId": "5e681cfc-c3c4-4bfd-9420-6671495bf3f7"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(223.7691, grad_fn=<DivBackward0>)\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(prediction)\n",
     "calculatedLoss = lm.mse( prediction, torch.from_numpy(targets) )\n",
-    "print(calculatedLoss)"
+    "print('loss ',calculatedLoss)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "gdx31ivD1FJU"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
