--- a/day2/day2.ipynb
+++ b/day2/day2.ipynb
@@ -1,16 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     " Day 2: 100 days of Daily Coding!\n",
     "\n",
     "Happy Sunday!\n",
     "\n",
-    "Today,  "
+    "Today, I implemented linear regression algorithm as part of the challenge. Linear regression is one the first alogrithme when you are starting your journey in machine learning and data science. \n",
+    "The key point in linear regression is the equation y = weight*x + bias\n",
+    "\n",
+    "weight and bias are called the hyperparameter .Those two variable where initialy set with random value.\n",
+    "y is our estimated prediction.\n",
+    "\n",
+    "In this implementation, i'm using gradient descent opitmisation to find the best value of my hyperparameter weight, bias. \n",
+    "\n",
+    "The code can be found here https://github.com/mamitiana/100DaysOfCode/blob/main/day2/day2.ipynb\n"
    ]
   },
   {
