--- a/day4/day4.ipynb
+++ b/day4/day4.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Day 4: 100 days of Daily Coding! \n",
+    "[Recommender system]\n",
+    "\n",
+    "Today, we are continuing the topic of recommender system with MARKET BASKET ANALYSIS. When we go to the market, we buy a Pizza for example, in addition to that we are more likely to buy Soda. Thus, in market basket analysis, the goal of the analysis is to look at what item sold implies what other item.\n",
+    " \n",
+    "The code can be found here: https://github.com/mamitiana/100DaysOfCode/blob/main/day4/day4.ipynb\n",
+    "\n",
+    "For those who are interested for the tutorial, please have a look here.: https://medium.com/swlh/a-tutorial-about-market-basket-analysis-in-python-predictive-hacks-497dc6e06b27"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
