day 6 content based algorithm

--- a/day5/day5.ipynb
+++ b/day5/day5.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We select the movie with"
+    "We select the movie with the highest weighted rating"
    ]
   },
   {
