--- a/day6/day6.ipynb
+++ b/day6/day6.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "id": "UVttwNIEX3Hy"
    },
@@ -94,28 +94,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "with open('commune_idf.geojson') as json_file:\n",
+    "with open('commune_idf_sample5.geojson') as json_file:\n",
     "    data = json.load(json_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1276"
+       "15"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,34 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'type': 'Feature',\n",
-       " 'properties': {'code': '95493', 'nom': 'Plessis-Luzarches', 'id': '95493'},\n",
-       " 'geometry': {'type': 'Polygon',\n",
-       "  'coordinates': [[[2.453733775279555, 49.08963108830742],\n",
-       "    [2.449213333890777, 49.095032301998465],\n",
-       "    [2.450001153528074, 49.100790397600576],\n",
-       "    [2.453733775279555, 49.08963108830742]]]},\n",
-       " 'id': '95493'}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[\"features\"][i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -165,11 +138,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('commune_idf.geojson', 'w') as json_file:\n",
+    "with open('commune_idf_sample51.geojson', 'w') as json_file:\n",
     "    json.dump(data, json_file)"
    ]
   },
